update to OG_NAME

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,5 +1,5 @@
 ---
-import { SITE_TITLE } from '../consts';
+import { SITE_OG_NAME } from '../consts';
 import Logo from '../components/ui/icons/Logo.astro';
 import { GIT_REPOSITORY_LINK } from '../consts';
 
@@ -10,7 +10,7 @@ import { GIT_REPOSITORY_LINK } from '../consts';
   <div class="container px-7 xl:px-0 py-4 max-w-screen-xl mx-auto flex justify-between items-center">
       <div class="text-2xl font-bold text-gray-300 flex flex-wrap">
           <Logo />
-          <span>{SITE_TITLE}</span>
+          <span>{SITE_OG_NAME}</span>
       </div>
 
       <!-- Menú para dispositivos móviles -->
