--- a/src/components/ui/elements/Button.astro
+++ b/src/components/ui/elements/Button.astro
@@ -1,5 +1,6 @@
 ---
 import type { HTMLAttributes } from 'astro/types';
+
 type Props = HTMLAttributes<'a'>;
 
 const { href="#", title="Button", ...Props } = Astro.props;
@@ -7,6 +8,6 @@ const { href="#", title="Button", ...Props } = Astro.props;
 
 <a
   href={href}
-  class="bg-[#00bd7e] hover:bg-[#008658] text-white font-bold py-3 px-6 rounded-full"
+  class="bg-[#00bd7e] hover:bg-[#008658] text-lime-950 font-bold py-3 px-6 rounded-full"
   >{ title }</a
 >
