--- a/src/components/sections/FeaturesSection.astro
+++ b/src/components/sections/FeaturesSection.astro
@@ -11,7 +11,7 @@ import FeaturesIcon from "../ui/icons/Features.astro";
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
       <!-- Feature 1 -->
       <div class="p-6 bg-[#333] rounded-lg">
-        <h3 class="text-xl font-bold mb-2 text-gray-200 flex flex-wrap items-end justify-center"><ApiIcon/>Gestion de Apis</h3>
+        <h3 class="text-xl font-bold mb-2 text-gray-200 flex flex-wrap items-end justify-center"><ApiIcon/>Gestión de APIs</h3>
         <p class="text-gray-300">
           Agrega tus claves API, personaliza y maximiza la descarga de tus medios.
         </p>
@@ -20,7 +20,7 @@ import FeaturesIcon from "../ui/icons/Features.astro";
       <div class="p-6 bg-[#333] rounded-lg">
         <h3 class="text-xl font-bold mb-2 text-gray-200 flex flex-wrap items-center justify-center"><SaveIcon/>Guardado de medios</h3>
         <p class="text-gray-300">
-          Guarda tus descargas en el directorio de tu elección o dejalo por defecto.
+          Guarda tus descargas en el directorio de tu elección o déjalo por defecto.
         </p>
       </div>
       <!-- Feature 3 -->
